.provarCaches/00D5h000009Q6XQEA0/objects/Employment_Website__c.object
<CustomObject>
    <fields>
        <fullName>Maximum_Budget__c</fullName>
        <label>Maximum Budget</label>
        <precision>8</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_per_Post__c</fullName>
        <label>Price per Post</label>
        <precision>7</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Web_Address__c</fullName>
        <label>Web Address</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>Employment Website</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Price_per_Post__c</columns>
        <columns>Web_Address__c</columns>
        <columns>Maximum_Budget__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Employement Website Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employment Websites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>